Fixing some things on the energy integration of the process.

--- a/energy_integration.org
+++ b/energy_integration.org
@@ -49,30 +49,72 @@
 | Cycl         | Θερμό |      125 |        25 |
 | Tol          | Θερμό |       45 |        25 |
 
+Καθώς στον παρακάτω πίνακα υπολογίζονται μόνο οι αισθητές θερμότητες, αξίζει να αναφερθεί πως θα πρέπει να προστεθούν και πολλοί όροι λανθάνουσας θερμότητας. Αλλαγή φάσης έχουν τα ρεύματα FeedSteam, StExpvapors, RProd, FlashVaps, GlycWater, PureGlycerol.
+
 Βλέπουμε κάθε θερμοκρασιακό interval που ορίζουν τα ρεύματα αυτά, υπολογίζουμε το συνολικό θερμό και ψυχρό Cp στο καθένα, το αφαιρούμε και υπολογίζουμε την ενθαλπία κάθε ρεύματος.
 
 #+CAPTION: Χαρακτηρισμός των "ψευδο"-ρευμάτων του ενεργειακού καταρράκτη
-|   Τ_1 |   T_2 |    ΔΤ |     CPc |     CPh |      CP |         ΔΗ |
-|-------+-------+-------+---------+---------+---------+------------|
-| 283.9 |   248 |  35.9 |       0 |   3.584 |  -3.584 |  -128.6656 |
-|   248 |   238 |    10 |   4.698 |   3.584 |   1.114 |      11.14 |
-|   238 |   237 |     1 |   4.698 |  13.757 |  -9.059 |     -9.059 |
-|   237 |   227 |    10 |  47.732 |  13.757 |  33.975 |     339.75 |
-|   227 |   155 |    72 |  47.732 |  83.315 | -35.583 |  -2561.976 |
-|   155 |   145 |    10 |  47.732 |  91.792 |  -44.06 |     -440.6 |
-|   145 | 139.4 |   5.6 | 105.479 |  91.792 |  13.687 |    76.6472 |
-| 139.4 |   135 |   4.4 | 105.479 |  92.532 |  12.947 |    56.9668 |
-|   135 |   125 |    10 | 105.479 | 161.279 |   -55.8 |      -558. |
-|   125 | 85.65 | 39.35 | 105.479 | 150.889 |  -45.41 | -1786.8835 |
-| 85.65 | 75.65 |   10. | 111.537 | 150.889 | -39.352 |    -393.52 |
-| 75.65 |  74.9 |  0.75 | 111.537 | 148.119 | -36.582 |   -27.4365 |
-|  74.9 |  64.9 |   10. | 115.730 | 148.119 | -32.389 |    -323.89 |
-|  64.9 | 56.97 |  7.93 | 115.730 | 143.233 | -27.503 | -218.09879 |
-| 56.97 | 54.75 |  2.22 | 115.730 | 147.048 | -31.318 |  -69.52596 |
-| 54.75 |    45 |  9.75 | 169.627 | 147.048 |  22.579 |  220.14525 |
-|    45 |    35 |    10 | 169.627 | 208.023 | -38.396 |    -383.96 |
-|    35 |    25 |    10 | 111.880 | 208.023 | -96.143 |    -961.43 |
+|   Τ_1 |    T_2 |    ΔΤ |     CPc |     CPh |      CP |         ΔΗ |
+|-------+--------+-------+---------+---------+---------+------------|
+| 283.9 |    248 |  35.9 |       0 |   3.584 |  -3.584 |  -128.6656 |
+|   248 |    238 |    10 |   4.698 |   3.584 |   1.114 |      11.14 |
+|   238 |    237 |     1 |   4.698 |  13.757 |  -9.059 |     -9.059 |
+|   237 | 230.01 |  6.99 |  47.732 |  13.757 |  33.975 |  237.48525 |
+|   230 |    227 |     3 |  47.732 |  13.757 |  33.975 |    101.925 |
+|   227 |    155 |    72 |  47.732 |  83.315 | -35.583 |  -2561.976 |
+|   155 |    145 |    10 |  47.732 |  91.792 |  -44.06 |     -440.6 |
+|   145 |  139.4 |   5.6 | 105.479 |  91.792 |  13.687 |    76.6472 |
+| 139.4 |    135 |   4.4 | 105.479 |  92.532 |  12.947 |    56.9668 |
+|   135 |    125 |    10 | 105.479 | 161.279 |   -55.8 |      -558. |
+|   125 |  97.01 | 27.99 | 105.479 | 150.889 |  -45.41 | -1271.0259 |
+|    97 |  85.65 | 11.35 | 105.479 | 150.889 |  -45.41 |  -515.4035 |
+| 85.65 |  75.65 |   10. | 111.537 | 150.889 | -39.352 |    -393.52 |
+| 75.65 |   74.9 |  0.75 | 111.537 | 148.119 | -36.582 |   -27.4365 |
+|  74.9 |   64.9 |   10. | 115.730 | 148.119 | -32.389 |    -323.89 |
+|  64.9 |  56.97 |  7.93 | 115.730 | 143.233 | -27.503 | -218.09879 |
+| 56.97 |  54.75 |  2.22 | 115.730 | 147.048 | -31.318 |  -69.52596 |
+| 54.75 |     45 |  9.75 | 169.627 | 147.048 |  22.579 |  220.14525 |
+|    45 |     35 |    10 | 169.627 | 208.023 | -38.396 |    -383.96 |
+|    35 |     25 |    10 | 111.880 | 208.023 | -96.143 |    -961.43 |
 #+TBLFM: $3=-($2 - $1)::$6=$4 - $5::$7=$6*$3
+
+** Υπολογισμός λανθάνουσων θερμότητων και προσθήκη τους στον παραπάνω πίνακα
+Λανθάνουσα θερμότητα εξάτμισης έχουν τα ρεύματα FeedSteam, RProd ενώ λανθάνουσα θερμότητα συμπήκνωσης έχουν τα StExpVapors, FlashVaps, GlycWater.
+
+Η θερμότητα εξάτμισης του FeedSteam είναι 21829.6 MJ/hr ενώ του RProd 28921 MJ/hr.
+Η θερμότητα συμπήκνωσης του StExpVapors είναι 21442 MJ/hr, του FlashVaps 29099 MJ/hr και του GlycWater 418.51 MJ/hr
+
+Το FeedSteam εξατμίζεται στους 225 (μπάινει στο ΜΣΓ ως 230) ενώ το GlycWater συμπηκνώνεται στους 102 (97 στο ΜΣΓ). Τα άλλα 3 είναι πιο περίπλοκα καθώς δεν αποτελούν καθαρό νερό άρα η λανθάνουσα θερμότητα απορροφάται/εκπέμπεται σε ένα θερμοκρασιακό εύρος.
+
+Για τους ατμούς από το Steam Explosion, το νερό έχει υγροποιηθεί πλήρως στους 130 \( ^oC \) (ή ανηγμένη θερμοκρασία 125 \( ^oC \)) και θα κάνουμε την παραδοχή πως η λανθάνουσα θερμότητα του εκπέμπεται με σταθερό ρυθμό για 102 \( ^oC \), άρα ο ρυθμός αυτός θα είναι 217.12 \( \frac{MJ}{hr ~^oC} \). Για το FlashVaps, η θερμοκρασία αυτή είναι 28 \( ^oC \) άρα θα θεωρήσουμε πως σε όλο το έυρος εκπέμπεται λανθάνουσα θερμότητα με ρυθμό 194.92 \( \frac{MJ}{hr ~ ^{o}C} \). Τέλος, για το RProd, δεν εξατμίζεται όλο το ρεύμα (υψηλό σημείο φυσαλίδας λόγω ύπαρξης της γλυκερόλης) άρα λανθάνουσα θερμότητα νερού και γλυκερόλης απορροφάται σε όλο το θερμοκρασιακό εύρος με ρυθμό 262.92 \( \frac{MJ}{hr ~ ^{o}C} \). Στην περιοχή από τους 135 \( ^oC \) μέχρι τους 35 \( ^oC \) έχουμε τις λανθάνουσες θερμότητες και των ατμών του Flash και του RProd. Άρα, η λανθάνουσα θερμότητα που θα προσθέσουμε θα είναι \( 262.92 - 194.92 = 68 ~ \frac{MJ}{hr ~ ^oC} \).
+
+Άρα ο παραπάνω πίνακας μεταβάλλεται ως εξής
+
+#+CAPTION: Υπολογισμός των "ψεύδο"-ρευμάτων με τις λανθάνουσες θερμότητες
+|    Τ_1 |    T_2 |    ΔΤ |        ΔΗ |
+|--------+--------+-------+-----------|
+|  283.9 |    248 |  35.9 | -128.6656 |
+|    248 |    238 |    10 |     11.14 |
+|    238 |    237 |     1 |    -9.059 |
+|    237 | 230.01 |  6.99 | 237.48525 |
+| 230.01 |    230 |  0.01 |   21829.6 |
+|    230 |    227 |     3 |   101.925 |
+|    227 |    155 |    72 |    -18195 |
+|    155 |    145 |    10 |   -2611.8 |
+|    145 |  139.4 |   5.6 |    333.15 |
+|  139.4 |    135 |   4.4 |    258.49 |
+|    135 |    125 |    10 |    -963.6 |
+|    125 |  97.01 | 27.99 |    632.29 |
+|  97.01 |     97 |  0.01 |   -417.83 |
+|     97 |  85.65 | 11.35 |     256.4 |
+|  85.65 |  75.65 |   10. |    286.48 |
+|  75.65 |   74.9 |  0.75 |    23.563 |
+|   74.9 |   64.9 |   10. |    356.11 |
+|   64.9 |  56.97 |  7.93 |    321.14 |
+|  56.97 |  54.75 |  2.22 |    81.434 |
+|  54.75 |     45 |  9.75 |    883.14 |
+|     45 |     35 |    10 |    296.04 |
+|     35 |     25 |    10 |   -2910.6 |
 
 * Αποτελέσματα - Γραφήματα
 Με βάση αυτά μπορεί να φτιαχθεί ο ενεργειακός καταρράκτης της διεργασίας και από αυτόν το μεγάλο σύνθετο γράφημα. Ο ενεργειακός καταρράκτης φαίνεται παρακάτω.
@@ -86,27 +128,31 @@
 
 #+CAPTION: Δεδομένα για τον ενεργειακό καταρράκτη
 #+PLOT: title:"Grand Composite Curve" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
-| Cumulative  Dh |     T |
-|----------------+-------|
-|        213.165 | 283.9 |
-|        341.831 |   248 |
-|        330.691 |   238 |
-|        339.750 |   237 |
-|              0 |   227 |
-|       2561.976 |   155 |
-|       3002.576 |   145 |
-|       2925.928 | 139.4 |
-|       2868.962 |   135 |
-|       3426.962 |   125 |
-|       5213.845 | 85.65 |
-|       5607.365 | 75.65 |
-|       5634.802 |  74.9 |
-|       5958.692 |  64.9 |
-|       6176.790 | 56.97 |
-|       6246.316 | 54.75 |
-|       6026.171 |    45 |
-|       6410.131 |    35 |
-|       7371.561 |    25 |
+| Cumulative  Dh |      T |
+|----------------+--------|
+|      22042.425 |  283.9 |
+|      22171.091 |    248 |
+|      22159.951 |    238 |
+|      22169.010 |    237 |
+|      21931.525 | 230.01 |
+|        101.925 |    230 |
+|              0 |    227 |
+|          18195 |    155 |
+|        20806.8 |    145 |
+|       20473.65 |  139.4 |
+|       20215.16 |    135 |
+|       21178.76 |    125 |
+|       20546.47 |  97.01 |
+|        20964.3 |     97 |
+|        20707.9 |  85.65 |
+|       20421.42 |  75.65 |
+|      20397.857 |   74.9 |
+|      20041.747 |   64.9 |
+|      19720.607 |  56.97 |
+|      19639.173 |  54.75 |
+|      18756.033 |     45 |
+|      18459.993 |     35 |
+|      21370.593 |     25 |
 
 #+CAPTION: Μεγάλο Σύνθετο Γράφημα
 #+ATTR_ORG: :width 600px
@@ -114,186 +160,103 @@
 
 Με τα ρεύματα αυτά ως έχουν, προκύπτει ότι απαιτείται μία μεγάλη ποσότητα ψυχρής παροχής και μικρή ποσότητα θερμής. Αυτό είναι ανεπιθύμητο επειδή η μονάδα έχει διαθέσιμη θερμή παροχή δωρεάν ενώ το ίδιο δεν ισχύει για την ψυχρή παροχή. Βέβαια, πολύ από αυτήν την απαίτηση οφείλεται στην εκμετάλλευση του θερμικού περιεχομένου των προιόντων τα οποία δεν είναι ανάγκη να ψυχθούν και τα εκμεταλλευόμαστε μόνο αν βοηθάνε.
 
-* Εναλλακτικά σενάρια ολοκλήρωσης
+* Σχόλια για την ολοκλήρωση διάφορων κομματιών
+** Αντιδραστήρας παραγωγής γλυκερόλης
+Ο αντιδραστήρας λειτουργεί στους 30 βαθμούς κελσίου και είναι εξώθερμος. Στο μεγάλο σύνθετο γράφημα θα έμπαινε στους 25 \( ^oC \) το οποίο είναι κάτω από τον κόμβο ανάσχεσης. Λόγω της πολύ στενής θερμοκρασιακής περιοχής στην οποία μπορεί να διεξαχθεί η αντίδραση, θεωρούμε πως δεν αξίζει να μελετηθεί ένα σενάριο ολοκλήρωσης του αντιδραστήρα αυτού με την υπόλοιπη διεργασία, καθώς σε κάθε περίπτωση απλώς θα αυξάνει την απαίτηση σε ψυχρή παροχή.
+** Αποστακτική στήλη γλυκερόλης
+Ο αναβραστήρας της στήλης λειτουργεί στους 293 \( ^oC \) στο ΜΣΓ και έχει απαίτηση θερμότητας στους 1105.44 MJ/hr. O συμπηκνωτήρας της στήλης λειτουργεί στους 145 \( ^oC \) (140 \( ^oC \) στο ΜΣΓ) με απαίτηση 149.46 MJ/hr. Καθώς ο κόμβος ανάσχεσης είναι στους 227 \( ^oC \) και το 293 \( ^oC \) υπερβαίνει τις θερμοκρασίες που εμφανίζονται στο ΜΣΓ για να ολοκληρωθεί η στήλη θα έπρεπε σε πρώτη φάση να λειτουργεί σε συνθήκες μειωμένης πίεσης (πχ απόσταξη υπό κενό). Λόγω του αρκετά αυξημένου λειτουργικού κόστους μίας τέτοιας διεργασίας, κρίνεται ακατάλληλο ως ιδέα.
+** Αντιδραστήρας παραγωγής φουρφουράλης
+Θερμοκρασία λειτουργίας οι 242 \( ^oC \), ή 237 \( ^oC \) στο μεγάλο σύνθετο γράφημα. Ο αντιδραστήρας είναι εξώθερμος, και λειτουργεί ισοθερμοκρασιακά πάνω από τον κόμβο ανάσχεσης. Επίσης, η απαίτηση του σε ψύξη είναι αρκετά χαμηλή (13.35 MJ/hr) άρα είναι αρκετά εύκολο να χωρέσει. Η ολοκλήρωση του βελτιώνει την διεργασία, βέβαια λόγω του πολύ μικρού θερμικού φορτίου, την βελτιώνει ελάχιστα.
+** Αντιδραστήρας παραγωγής κυκλοπεντανόνης
+Ο αντιδραστήρας αυτός λειτουργεί στους 160 \( ^oC \) και είναι εξώθερμος (ως αντίδραση υδρογόνωσης). Αυτό είναι κάτω από τον κόμβο ανάσχεσης και μάλιστα αρκετά, άρα η ολοκλήρωση δεν θεωρείται εφικτή.
+** Αποστακτική στήλη κυκλοπεντανόνης
+Ο συμπηκνωτήρας είναι ένα θερμό ρεύμα στους 50 \( ^oC \) (45 \( ^oC \) στο ΜΣΓ) με θερμότητα 8971.67 MJ/hr ενώ ο αναβραστήρας είναι ένα ψυχρό ρεύμα στους 130 (135 \( ^oC \) στο ΜΣΓ) με θερμότητα 9545.79 MJ/hr. Και οι 2 θερμοκρασίες είναι κάτω από τον κόμβο ανάσχεσης και υπάρχει σίγουρα το περιθώριο να γίνει μία ολοκλήρωση. Η ολοκλήρωση της στήλης θα γίνει αφαιρώντας 9545.79 MJ/hr στη θερμοκρασία του αναβραστήρα και επιστρέφοντας 8971.67 MJ/hr στην θερμοκρασία του συμπηκνωτήρα.
+** Αντιδραστήρας σακχαροποίησης
+Ο αντιδραστήρας λειτουργεί στους 50 \( ^oC \) και είναι ενδόθερμος (45 στο ΜΣΓ). Είναι κάτω από τον κόμβο ανάσχεσης και έχει απαίτηση 393.63 MJ/hr άρα η ολοκλήρωση του είναι αρκετά εύκολη.
 
-Τα δύο σημαντικότερα θερμά ρεύματα που συνεισφέρουν σε αυτό το ανεπιθύμητο αποτέλεσμα είναι οι ατμοί της έκρηξης ατμού (οι οποίοι είναι σε πολύ υψηλή θερμοκρασία και είναι αρκετά μεγάλη ποσότητα) και οι ατμοί του flash στον καθαρισμό της γλυκερόλης που είναι επίσης μεγάλη ποσότητα νερού στην ατμώδη φάση. Αν δεν χρησιμοποιηθεί τίποτα από τα δύο, το αποτέλεσμα θα είναι πως αντί για πολύ ψυχρή παροχή, χρειαζόμαστε πολύ θερμή παροχή. Έστω ότι χρησιμοποιούμε μόνο τους ατμούς του flash και όχι αυτούς της έκρηξης ατμού (οι οποίοι έχουν και μεγαλύτερο θερμοκρασιακό εύρος και μεγαλύτερη θερμοχωρητικότητα).
-
-#+CAPTION: Καταρράκτης χωρίς steam explosion vapors
-|   Τ_1 |   T_2 |    ΔΤ |     CPc |     CPh |      CP |        ΔΗ |
-|-------+-------+-------+---------+---------+---------+-----------|
-| 283.9 |   248 |  35.9 |       0 |   3.584 |  -3.584 | -128.6656 |
-|   248 |   238 |    10 |   4.698 |   3.584 |   1.114 |     11.14 |
-|   238 |   237 |     1 |   4.698 |  13.757 |  -9.059 |    -9.059 |
-|   237 |   227 |    10 |  47.732 |  13.757 |  33.975 |    339.75 |
-|   227 |   155 |    72 |  47.732 |  17.828 |  29.904 |  2153.088 |
-|   155 |   145 |    10 |  47.732 |  26.305 |  21.427 |    214.27 |
-|   145 | 139.4 |   5.6 | 105.479 |  26.305 |  79.174 |  443.3744 |
-| 139.4 |   135 |   4.4 | 105.479 |  27.045 |  78.434 |  345.1096 |
-|   135 |   125 |    10 | 105.479 |  95.792 |   9.687 |     96.87 |
-|   125 | 85.65 | 39.35 | 105.479 |  85.402 |  20.077 | 790.02995 |
-| 85.65 | 75.65 |   10. | 111.537 |  85.402 |  26.135 |    261.35 |
-| 75.65 |  74.9 |  0.75 | 111.537 |  82.632 |  28.905 |  21.67875 |
-|  74.9 |  64.9 |   10. | 115.730 |  82.632 |  33.098 |    330.98 |
-|  64.9 | 56.97 |  7.93 | 115.730 |  77.746 |  37.984 | 301.21312 |
-| 56.97 | 54.75 |  2.22 | 115.730 |  81.561 |  34.169 |  75.85518 |
-| 54.75 |    45 |  9.75 | 169.627 |  81.561 |  88.066 |  858.6435 |
-|    45 |    35 |    10 | 169.627 | 142.536 |  27.091 |    270.91 |
-|    35 |    25 |    10 | 111.880 | 142.536 | -30.656 |   -306.56 |
-#+TBLFM: $3=-($2 - $1)::$6=$4 - $5::$7=$6*$3
-
-#+CAPTION: Δεδομένα για τον ενεργειακό καταρράκτη
-#+PLOT: title:"Grand Composite Curve" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
-| Cumulative  Dh |     T |
-|----------------+-------|
-|       6376.537 | 283.9 |
-|       6505.203 |   248 |
-|       6494.063 |   238 |
-|       6503.122 |   237 |
-|       6163.372 |   227 |
-|       4010.284 |   155 |
-|       3796.014 |   145 |
-|       3352.640 | 139.4 |
-|       3007.530 |   135 |
-|       2910.660 |   125 |
-|       2120.630 | 85.65 |
-|       1859.280 | 75.65 |
-|       1837.601 |  74.9 |
-|       1506.621 |  64.9 |
-|       1205.408 | 56.97 |
-|       1129.553 | 54.75 |
-|         270.91 |    45 |
-|              0 |    35 |
-|         306.56 |    25 |
-
-#+CAPTION: Μεγάλο Σύνθετο Γράφημα χωρίς τους ατμούς της έκρηξης ατμού
-#+ATTR_ORG: :width 700px
-[[file:Diagrams/grand_composite_curve_2.png]]
-
-Με βάση το αποτέλεσμα αυτό, θεωρείται ότι υπάρχει περιθώριο να εκμεταλλευτούμε το θερμό ρεύμα που παραλείψαμε (καθώς υπάρχει μία σχετικά μεγάλη απαίτηση σε θερμό), αλλά δεν υπάρχει λόγος να ψυχθεί αυτό μέχρι χαμηλή θερμοκρασία επειδή όσο περισσότερο ψύχεται, τόσο περισσότερη ψυχρή παροχή θα θέλουμε. Από τους παραπάνω υπολογισμούς, βλέπουμε ότι η συνολική θερμοχωρητικότητα των θερμών είναι χαμηλή μέχρι τους 135 \( ^oC \) και μετά, που αρχίζουν να ψύχονται οι ατμοί του flash από τον καθαρισμό της γλυκερόλης, οι οποίοι έχουν υψηλή θερμοχωρητικότητα, υπάρχει αρκετή θερμή παροχή. Άρα, είναι αρκετά πιθανό η ψύξη των ατμών του steam explosion μέχρι τους 135 \( ^oC \) στο ΜΣΓ (δηλαδή 140 \( ^oC \)) να είναι βοηθητική, μειώνοντας σημαντικά την απαίτηση σε θερμή παροχή χωρίς να αυξάνει πολύ την απαίτηση σε ψυχρή βοηθητική παροχή.
-
-#+CAPTION: Καταρράκτης με μερική ψύξη των ατμών του steam explosion
-|   Τ_1 |   T_2 |    ΔΤ |     CPc |     CPh |      CP |        ΔΗ |
-|-------+-------+-------+---------+---------+---------+-----------|
-| 283.9 |   248 |  35.9 |       0 |   3.584 |  -3.584 | -128.6656 |
-|   248 |   238 |    10 |   4.698 |   3.584 |   1.114 |     11.14 |
-|   238 |   237 |     1 |   4.698 |  13.757 |  -9.059 |    -9.059 |
-|   237 |   227 |    10 |  47.732 |  13.757 |  33.975 |    339.75 |
-|   227 |   155 |    72 |  47.732 |  83.315 | -35.583 | -2561.976 |
-|   155 |   145 |    10 |  47.732 |  91.792 |  -44.06 |    -440.6 |
-|   145 | 139.4 |   5.6 | 105.479 |  91.792 |  13.687 |   76.6472 |
-| 139.4 |   135 |   4.4 | 105.479 |  92.532 |  12.947 |   56.9668 |
-|   135 |   125 |    10 | 105.479 |  95.792 |   9.687 |     96.87 |
-|   125 | 85.65 | 39.35 | 105.479 |  85.402 |  20.077 | 790.02995 |
-| 85.65 | 75.65 |   10. | 111.537 |  85.402 |  26.135 |    261.35 |
-| 75.65 |  74.9 |  0.75 | 111.537 |  82.632 |  28.905 |  21.67875 |
-|  74.9 |  64.9 |   10. | 115.730 |  82.632 |  33.098 |    330.98 |
-|  64.9 | 56.97 |  7.93 | 115.730 |  77.746 |  37.984 | 301.21312 |
-| 56.97 | 54.75 |  2.22 | 115.730 |  81.561 |  34.169 |  75.85518 |
-| 54.75 |    45 |  9.75 | 169.627 |  81.561 |  88.066 |  858.6435 |
-|    45 |    35 |    10 | 169.627 | 142.536 |  27.091 |    270.91 |
-|    35 |    25 |    10 | 111.880 | 142.536 | -30.656 |   -306.56 |
-#+TBLFM: $3=-($2 - $1)::$6=$4 - $5::$7=$6*$3
-
-#+CAPTION: Δεδομένα για τον ενεργειακό καταρράκτη
-#+PLOT: title:"Grand Composite Curve" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
-| Cumulative  Dh |     T |
-|----------------+-------|
-|        351.734 | 283.9 |
-|        480.399 |   248 |
-|        469.259 |   238 |
-|        478.318 |   237 |
-|        138.568 |   227 |
-|       2700.544 |   155 |
-|       3141.144 |   145 |
-|       3064.497 | 139.4 |
-|       3007.530 |   135 |
-|       2910.660 |   125 |
-|       2120.630 | 85.65 |
-|       1859.280 | 75.65 |
-|       1837.601 |  74.9 |
-|       1506.621 |  64.9 |
-|       1205.408 | 56.97 |
-|       1129.553 | 54.75 |
-|         270.91 |    45 |
-|              0 |    35 |
-|         306.56 |    25 |
-
-#+CAPTION: Μεγάλο Σύνθετο Γράφημα χωρίς τους ατμούς της έκρηξης ατμού
-#+ATTR_ORG: :width 700px
-[[file:Diagrams/grand_composite_curve_3.png]]
-
-* Συμπεράσματα
-Συμπέρασμα ότι με την ενεργειακή ολοκλήρωση αυτή, η οποία θεωρείται και η καλύτερη, οι ενεργειακές απαιτήσεις της διεργασίας γίνονται
-
-Απαίτηση σε ψυχρή παροχή 306.56 MJ/h σε θερμοκρασία κάτω από 25 \( ^oC \) στο ΜΣΓ (δηλαδή κάτω από 20 \( ^oC \), άρα στους 15 \( ^oC \) πχ).
-
-Απαίτηση σε θερμή παροχή: 351.73 MJ/h. Αν εκμεταλλευτούμε την μικρή τσέπη που δημιουργείται στο πάνω μέρος του ΜΣΓ, τότε η θερμή παροχή πρέπει να διατίθεται τουλάχιστον στους 235 \( ^oC \) σε αυτό (δηλαδή τουλάχιστον 240 \( ^oC \) αν χρησιμοποιούμε την πραγματική θερμοκρασία), αλλιώς πρέπει να διατίθεται στους 284 \( ^oC \) τουλάχιστον. 
-
-Επίσης, πέρα από αυτήν την ενεργειακή τσέπη η οποία έχει δημιουργηθεί και επιτρέπει ο ατμός που παράγεται να είναι σε χαμηλότερη ενεργειακή στάθμη, υπάρχει και άλλη μία, η οποία είναι πάρα πολύ σημαντικής έκτασης και επιτρέπει την πλήρη ενεργειακή αυτονομία όλων των ρευμάτων από 227 \( ^oC \) μέχρι λίγο πάνω από 45 \( ^oC \).
-
-Επίσης, αξίζει να σημειωθεί πως ο κόμβος ανάσχεσης είναι το δεύτερο σημείο του γραφήματος με το πρώτο να είναι πολύ μικρό. Άρα, οι περιοχές μέσα και κάτω από τον κόμβο ανάσχεσης είναι πολύ μικρές. Αυτό μπορεί να δημιουργήσει προβλήματα εάν θέλουμε να ολοκληρώσουμε μία αντλία θερμότητας (μέσα από τον κόμβο ανάσχεσης) ή έναν ενδόθερμο αντιδραστήρα (κάτω από τον κόμβο ανάσχεσης).
-
-** Σχόλια για την ολοκλήρωση διάφορων κομματιών
-*** Αντιδραστήρας παραγωγής γλυκερόλης
-Ο αντιδραστήρας λειτουργεί στους 30 βαθμούς κελσίου και είναι εξώθερμος. Στο μεγάλο σύνθετο γράφημα θα έμπαινε στους 25 \( ^oC \) το οποίο είναι κάτω από τον κόμβο ανάσχεσης κατά 10. Λόγω της πολύ στενής θερμοκρασιακής περιοχής στην οποία μπορεί να διεξαχθεί η αντίδραση, θεωρούμε πως δεν αξίζει να μελετηθεί ένα σενάριο ολοκλήρωσης του αντιδραστήρα αυτού με την υπόλοιπη διεργασία (όπου θα έπρεπε η θερμοκρασία λειτουργίας να αυξηθεί κατά 10 τουλάχιστον βαθμούς). Ακόμη όμως και να γινόταν, η απαίτηση σε ψύξη είναι υψηλή (12901.5 MJ/hr) και με την υπάρχουσα διεργασία και ολοκλήρωση, δεν περισσεύει πουθενά τόση ψυχρή παροχή.
-*** Αποστακτική στήλη γλυκερόλης
-Ο αναβραστήρας της στήλης λειτουργεί στους 293 \( ^oC \) στο ΜΣΓ και έχει απαίτηση θερμότητας στους 1105.44 MJ/hr. Αυτό υπερβαίνει τις θερμοκρασίες καθώς και τις ενθαλπίες που υπάρχουν στο διάγραμμα. Άρα, η ολοκλήρωση όλης της στήλης με το υπόλοιπο διάγραμμα ροής είναι ανέφικτη. Όμως, ο συμπηκνωτήρας της στήλης λειτουργεί στους 145 \( ^oC \) (140 \( ^oC \) στο ΜΣΓ). Στο σημείο αυτό είναι η μεγάλη ενεργειακή τσέπη του ΜΣΓ, άρα η ολοκλήρωση είναι αρκετά εύκολη. Επίσης, η απαίτηση σε ψύξη είναι σχετικά μικρή (149.49 MJ/hr) άρα ο συμπηκνωτήρας αυτός θα μπορούσε να ολοκληρωθεί ως εναλλάκτης αλλά όχι ως ολόκληρη αποστακτική.
-*** Αντιδραστήρας παραγωγής φουρφουράλης
-Θερμοκρασία λειτουργίας οι 242 \( ^oC \), ή 237 \( ^oC \) στο μεγάλο σύνθετο γράφημα. Ο αντιδραστήρας είναι εξώθερμος, άρα μπορεί να γίνει σωστή ολοκλήρωση. Καθώς είναι αρκετά ψηλά στο γράφημα, υπάρχουν σίγουρα ρεύματα πιο ψυχρά από αυτό για να το ψύξουν. Επίσης, η απαίτηση του σε ψύξη είναι αρκετά χαμηλή (13.35 MJ/hr) άρα είναι αρκετά εύκολο να χωρέσει.
-*** Αντιδραστήρας παραγωγής κυκλοπεντανόνης
-Ο αντιδραστήρας αυτός λειτουργεί στους 160 \( ^oC \) και είναι εξώθερμος (ως αντίδραση υδρογόνωσης). Στο σημείο αυτό υπάρχει διαθέσιμη θερμική ενέργεια λόγω της ενεργειακής τσέπης (της τάξης των 2500 MJ/hr). Βέβαια, ο θερμοτονισμός της αντίδρασης είναι μίας τάξης μεγέθους πάνω από την απαίτηση αυτή άρα δεν μπορεί να καλυφθεί η ανάγκη από τα υπάρχοντα ρεύματα.
-*** Αποστακτική στήλη κυκλοπεντανόνης
-Οι θερμικές απαιτήσεις της στήλης υπερβαίνουν την διαθέσιμη θερμότητα της διεργασίας άρα στην παρούσα φάση δεν μπορεί να ολοκληρωθεί. Η απαίτηση σε ψυχρό είναι 8999.76 MJ/hr, η οποία μπορεί να ικανοποιηθεί με νερό ψύξης ενώ αυτή σε θερμό είναι 9543.12 MJ/hr η οποία πρέπει να είναι ατμός σε θερμοκρασία τουλάχιστον 140 \( ^oC \). Εφόσον αυτή θα παραχθεί από το κύκλο Rankine, είναι εύκολο να ρυθμιστεί κατάλληλα.
-*** Αντιδραστήρας σακχαροποίησης
-Ο αντιδραστήρας λειτουργεί στους 50 \( ^oC \) και είναι ενδόθερμος. Είναι πάνω από τον κόμβο ανάσχεσης, αλλά μέσα σε μία σχετικά μεγάλη ενεργειακή τσέπη. Στο σημείο αυτό της τσέπης υπάρχει διαθέσιμη περίπου 1000 MJ/hr θερμών παροχών και η απαίτηση του αντιδραστήρα είναι (393.63 MJ/hr) άρα η ολοκλήρωση θεωρείται εφικτή.
-
-*** Αλλαγές στο ΜΣΓ
-Για την αποστακτική της γλυκερόλης, αναφέρθηκε πως μπορεί να ολοκληρωθεί ως εναλλάκτης ο συμπυκνωτήρας χωρίς να ολοκληρώσουμε όλη την στήλη λόγω ανεπάρκειας ενέργειας. Άρα, στους 140 \( ^oC \) μπορούμε να πούμε πως υπάρχει ένα επιπλέον θερμό ρεύμα το οποίο έχει ενθαλπία 149.49 MJ/hr. Άρα, μπορεί η περιοχή από τους 145 μέχρι τους 139.4 να μειώσει την ενθαλπία της κατά αυτόν τον αριθμό. Η ολοκλήρωση αυτή μετακινεί τον κόμβο ανάσχεσης αρκετά πιο ψηλά στο ΜΣΓ (227 \( ^oC \)) και κάνει τον παλιό κόμβο ανάσχεσης να είναι στα 11 περίπου MJ/hr αντί για 0. Η ολοκλήρωση του αντιδραστήρα οδηγεί σε απαίτηση σε θερμή παροχή η οποία είναι περίπου το 0.6 της αρχικής και σε ελάχιστη αύξηση της απαίτησης σε ψυχρή παροχή, άρα είναι όντως ένα επιθυμητό σενάριο ολοκλήρωσης.
-
-Ομοίως, ο αντιδραστήρας της φουρφουράλης είναι ένας εξώθερμος αντιδραστήρας που μπορεί να λειτουργήσει ως επιπλέον θερμό ρεύμα για την διεργασία με θερμότητα 13.35 MJ/hr στους 237 (θα προστεθεί στο interval 237->227). Αν προσθέσουμε και το ρεύμα αυτό στην προηγούμενη ολοκλήρωση, παρατηρούμε μία μικρή μείωση της απαίτησης σε θερμή παροχή (213.2->199.8) καθώς και μικρή αύξηση της ενεργειακής τσέπης πάνω από τον κόμβο ανάσχεσης. Άρα, έχει θετική επίδραση παρότι αρκετά μικρότερη από την παραπάνω.
-
-Τέλος, ο τρίτος αντιδραστήρας που αναφέρθηκε ότι μπορεί να ολοκληρωθεί είναι ο αντιδραστήρας της σακχαροποίησης της κυτταρίνης ο οποίος όμως είναι ενδόθερμος, άρα λειτουργεί ως ένα ψυχρό ρεύμα στους 55 \( ^oC \) το οποίο προσθέτει 393.63 MJ/hr στο interval 56.97->54.75. Η ολοκλήρωση αυτή οδηγεί σε μία αρκετά μικρή μείωση της ψυχρής παροχής αλλά επίσης προκαλεί σχεδόν τριπλασιασμό της απαίτησης σε θερμή παροχή. Συμπέρασμα πως δεν αξίζει να γίνει μία τέτοια ολοκλήρωση όπως και οι υπόλοιπες ολοκληρώσεις του ΜΣΓ.
+** Αλλαγές στο ΜΣΓ
+Η ολοκλήρωση των αντιδραστήρων παραγωγής της φουρφουράλης και της σακχαροποίησης είναι εφικτή και μειώνει την απαίτηση της διεργασίας σε θερμά και ψυχρά ρεύματα αντίστοιχα, παρόλο που η επίδραση τους δεν είναι τόσο μεγάλη. Η αποστακτική της φουρφουράλης προκαλεί μία σημαντική αλλαγή στο ΜΣΓ η οποία οδηγεί στον διαχωρισμό να είναι πρακτικά δωρεάν και να δημιουργείται και μία ενεργειακή τσέπη λόγω της ολοκλήρωσης αυτής.
 
 Παρακάτω παρατίθεται και το ΜΣΓ στο οποίο έχουν γίνει οι δύο αυτές προσθήκες.
 #+CAPTION: Δεδομένα για τον ενεργειακό καταρράκτη
 #+PLOT: title:"Grand Composite Curve" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
-| Cumulative  Dh |     T |
-|----------------+-------|
-|        199.815 | 283.9 |
-|        328.481 |   248 |
-|        317.341 |   238 |
-|          326.4 |   237 |
-|              0 |   227 |
-|       2561.976 |   155 |
-|       3002.576 |   145 |
-|       3075.419 | 139.4 |
-|       3018.452 |   135 |
-|       2921.582 |   125 |
-|       2131.552 | 85.65 |
-|       1870.202 | 75.65 |
-|       1848.523 |  74.9 |
-|       1517.543 |  64.9 |
-|       1216.330 | 56.97 |
-|       1140.475 | 54.75 |
-|        281.831 |    45 |
-|         10.921 |    35 |
-|        317.481 |    25 |
+| Cumulative  Dh |      T |
+|----------------+--------|
+|      22029.075 |  283.9 |
+|      22157.741 |    248 |
+|      22146.601 |    238 |
+|      22169.010 |    237 |
+|      21931.525 | 230.01 |
+|        101.925 |    230 |
+|              0 |    227 |
+|          18195 |    155 |
+|        20806.8 |    145 |
+|       20473.65 |  139.4 |
+|       20215.16 |    135 |
+|       10669.37 |    135 |
+|       11632.97 |    125 |
+|       11000.68 |  97.01 |
+|       11418.51 |     97 |
+|       11162.11 |  85.65 |
+|       10875.63 |  75.65 |
+|      10852.067 |   74.9 |
+|      10495.957 |   64.9 |
+|      10174.817 |  56.97 |
+|      10093.383 |  54.75 |
+|       9210.243 |     45 |
+|      18181.913 |     45 |
+|      18066.363 |     35 |
+|          20977 |     25 |
 
-#+CAPTION: Μεγάλο Σύνθετο Γράφημα μετά την ολοκλήρωση 2 διεργασιών
+#+CAPTION: Μεγάλο Σύνθετο Γράφημα μετά την ολοκλήρωση 3 διεργασιών
 #+ATTR_ORG: :width 700px
-[[file:Diagrams/grand_composite_curve_4.png]]
+[[file:Diagrams/grand_composite_curve_2.png]]
 
-** Απαίτηση σε θερμές παροχές
-Ιδιαίτερο ενδιαφέρον έχει να δούμε πόση ποσότητα ατμού χρειάζεται και σε τι επίπεδα χρειάζεται αυτή. Αυτό είναι ενδιαφέρον επειδή ο ατμός παράγεται από ενσωματωμένο κύκλο Rankine της διεργασίας, άρα μπορούν να επιλεχθούν τα επίπεδα κατάλληλα ανάλογα με τις απαιτήσεις. Η υψηλότερη στάθμη του ατμού είναι αρκετά υψηλή, άρα σίγουρα μπορούν να καλυφθούν όλες οι ανάγκες. Επίσης, πρέπει να ληφθεί υπόψην πως λόγω του κόστους των στροβίλων, είναι σπανίως οικονομικά επιθυμητό να έχουμε πάνω από 3 στρόβιλους στο κύκλο, άρα πάνω από 4 επίπεδα ατμού.
+** Ατμοπαραγωγή
+Με βάση αυτήν την ολοκλήρωση, βλέπουμε ότι τα ρεύματα με θερμοκρασίες από 45 \( ^oC \) μέχρι περίπου 190 \( ^oC \) μπορούν να δράσουν αυτόνομα λόγω της ενεργειακής τσέπης. Εκτός της τσέπης, διακρίνουμε δύο περιοχές απαίτησης ψυχρών παροχων. 11766.8 MJ/hr ψυχρή παροχή απαιτείται για ψύξη ρευμάτων σε θερμοκρασίες από 45 \( ^oC \) και κάτω. Τα υπόλοιπα 9210.2 MJ/hr χρησιμοποιούνται για ψύξη ρευμάτων σε θερμοκρασίες από 190 \( ^oC \) εώς 227 \( ^oC \). Καθώς τα ρεύματα αυτά έχουν αρκετό θερμικό περιεχόμενο, θεωρείται πως μπορεί να παραχθεί κάποιος ατμός από αυτά. Με βάση τις θερμοκρασίες, κρίνεται σκόπιμο ο ατμός αυτός να είναι ατμός σε θερμοκρασία 175 \( ^oC \) και πίεση τέτοια ώστε να είναι λίγο πάνω από το σημείο κορεσμού του. Για Τ = 175 \( ^oC \), P_sat = 8.93 bar, άρα θα παράξουμε για παράδειγμα ατμό στα 8.5 bar. Με βάση το θερμικό περιεχόμενο που υπάρχει διαθέσιμο, μπορεί η παροχή του ατμού αυτού να είναι 176.7 kmol/hr. Άρα, για να μειώσουμε τις απαιτήσεις σε ψυχρή παροχή, βάζουμε ένα νέο ψυχρό ρεύμα στο ΜΣΓ το οποίο πάει από τους 25 \( ^oC \) στους 180 \( ^oC \). Η αισθητή θερμότητα της μεταβολής είναι 2389.9 MJ/hr μέχρι τους 178.1 \( ^oC \), η λανθάνουσα (θα βάλουμε στον πίνακα μεταβολή από 178.1 μέχρι 178.2) θα έχει μεταβολή 6804.2 MJ/hr και τα υπόλοιπα 16 είναι από τους 178.2 μέχρι τους 180.
 
-#+CAPTION: Απαιτούμενα επίπεδα ατμού
-| Απαίτηση                     | Θερμότητα (MJ/hr) | Θερμοκρασία (C) |
-|------------------------------+-------------------+-----------------|
-| ΜΣΓ                          |            199.82 |             250 |
-| Αναβραστήρας Γλυκερόλης      |           1105.44 |             300 |
-| Αναβραστήρας Κυκλοπεντανόνης |           9543.12 |             140 |
-| Αντιδραστήρας Σακχαροποίησης |            393.63 |              60 |
+#+CAPTION: Δεδομένα για τον ενεργειακό καταρράκτη με ατμοπαραγωγή
+#+PLOT: title:"Grand Composite Curve" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
+| Cumulative  Dh |      T |
+|----------------+--------|
+|      22029.075 |  283.9 |
+|      22157.741 |    248 |
+|      22146.601 |    238 |
+|      22169.010 |    237 |
+|      21931.525 | 230.01 |
+|        101.924 |    230 |
+|              0 |    227 |
+|          12220 |  178.2 |
+|         5415.8 |  178.2 |
+|      11033.056 |    155 |
+|      13490.656 |    145 |
+|      13071.154 |  139.4 |
+|      12744.816 |    135 |
+|       3199.029 |    135 |
+|       4008.425 |    125 |
+|       2944.530 |  97.01 |
+|       3362.205 |     97 |
+|       2930.789 |  85.65 |
+|       2490.108 |  75.65 |
+|       2454.980 |   74.9 |
+|       1944.670 |   64.9 |
+|       1501.250 |  56.97 |
+|       1385.583 |  54.75 |
+|        352.099 |     45 |
+|       9323.769 |     45 |
+|       9054.019 |     35 |
+|      11810.456 |     25 |
 
-Από τα 4 ρεύματα αυτά, είναι εύκολο να παρατηρηθούν τα δύο επίπεδα που χρειάζονται. Το πρώτο πρέπει να είναι στους 300 \( ^oC \) τουλάχιστον με θερμική δυνατότητα περίπου 1300 MJ/hr ενώ το δεύτερο πρέπει να είναι στους 140 \( ^oC \) τουλάχιστον με θερμική δυνατότητα 10000 MJ/hr περίπου. 
+#+CAPTION: Μεγάλο Σύνθετο Γράφημα μετά την ενσωμάτωση ατμοπαραγωγής
+#+ATTR_ORG: :width 700px
+[[file:Diagrams/grand_composite_curve_3.png]]
 
- Το 1ο επίπεδο είναι ο ατμός υψηλής πίεσης ο οποίος παράγεται από τα καυσαέρια. Για να παράγει ικανοποιητικά ποσά ενέργειας το κύκλο, πρέπει να είναι τουλάχιστον στα 100 bar, ώστε η εκτόνωση του να δώσει πολύ έργο. Ο ατμός που χρησιμοποιείται είναι στα 150 bar και 700 \( ^oC \). Η πρώτη βαθμίδα εκτόνωσης τοποθετείται στα 30 bar όπου ο ατμός έχει θερμοκρασία 443 \( ^oC \) και η θερμοκρασία του μειώνεται στους 364 \( ^oC \). Η θερμοκρασία είναι πολύ υψηλή διότι ξεκινάμε από ατμό πολύ μεγάλης θερμοκρασίας και πίεσης και η εκτόνωση αυτή οδηγεί σε αυτήν την θερμοκρασία. Όμως, αυτό είναι καλό επειδή σημαίνει ότι και μετά την θέρμανση που πρέπει να κάνει, είναι ακόμη υπέρθερμος με σχετικά μεγάλο βαθμό υπερθέρμανσης άρα μπορεί να τοποθετηθεί ασφαλώς σε δεύτερο στρόβιλο όπου θα εκτονωθεί μέχρι τα 4 bar και θερμοκρασία 151 \( ^oC \) ώστε να καλύψει τις ανάγκες που χρειάζονται σε χαμηλή θερμοκρασία. Η ποσότητα που χρησιμοποιήθηκε επαρκεί ώστε ο ατμός να φτάσει σε μίγμα με την υγρή φάση ποιότητας 0.5 περίπου. Θα μπορούσαμε να τραβήξουμε μικρότερη ποσότητα εξαρχής, αλλά κινδυνεύουμε να δημιουργηθεί υγρή φάση μέσα στον στρόβιλο (καθώς το νερό είναι κοντά στον κορεσμό του ως έχει) και επίσης, δυσχεραίνουμε την αναθέρμανση η οποία γίνεται με τον υπόλοιπο ατμό στα 30 bar. Η τέταρτη βαθμίδα είναι το νερό χαμηλής πίεσης που τροφοδοτούμε, το οποίο έχει πίεση 0.1 bar.
+* Συμπεράσματα
+Συμπέρασμα ότι με την ενεργειακή ολοκλήρωση αυτή έχουμε τα εξής:
+
+Απαίτηση σε ψυχρή παροχή 11810.46 MJ/h σε θερμοκρασία κάτω από 25 \( ^oC \) στο ΜΣΓ (δηλαδή κάτω από 20 \( ^oC \), άρα στους 15 \( ^oC \) πχ).
+
+Απαίτηση σε θερμή παροχή: 22029.08 MJ/h. Αυτό πρακτικά οφείλεται στην λανθάνουσα θερμότητα του ατμού που χρησιμοποιείται στο steam explosion και θα καλυφθεί εκμαστεύοντας μία ποσότητα ατμού σε υψηλή πίεση (60 bar) από το ενσωματωμένο κύκλο Rankine της διεργασίας με παροχή τέτοια ώστε να επαρκεί για να καλύψει την ανάγκη αυτή.
+
+Επίσης πρέπει να υπάρχουν διαθέσιμες ψυχρές παροχές για την ψύξη των αντιδραστήρων παραγωγής φουρφουράλης και γλυκερόλης, του συμπηκνωτήρα της αποστακτικής στήλης της γλυκερόλης και τέλος θερμή παροχή για τον αναβραστήρα της στήλης εκείνης.
+
