Started designing the heat exchanger network of the process.
The explanation of the HEN design was described, the grid diagram was
drawn in Inkscape and the part of the network that is above the pinch
point was fully designed.

--- a/energy_integration.org
+++ b/energy_integration.org
@@ -256,7 +256,7 @@
 
 Απαίτηση σε ψυχρή παροχή 11810.46 MJ/h σε θερμοκρασία κάτω από 25 \( ^oC \) στο ΜΣΓ (δηλαδή κάτω από 20 \( ^oC \), άρα στους 15 \( ^oC \) πχ).
 
-Απαίτηση σε θερμή παροχή: 22029.08 MJ/h. Αυτό πρακτικά οφείλεται στην λανθάνουσα θερμότητα του ατμού που χρησιμοποιείται στο steam explosion και θα καλυφθεί εκμαστεύοντας μία ποσότητα ατμού σε υψηλή πίεση (60 bar) από το ενσωματωμένο κύκλο Rankine της διεργασίας με παροχή τέτοια ώστε να επαρκεί για να καλύψει την ανάγκη αυτή.
+Απαίτηση σε θερμή παροχή: 22029.08 MJ/h. Αυτό πρακτικά οφείλεται στην λανθάνουσα θερμότητα του ατμού που χρησιμοποιείται στο steam explosion και θα καλυφθεί εκμαστεύοντας μία ποσότητα ατμού σε υψηλή πίεση (60 bar) από το ενσωματωμένο κύκλο Rankine της διεργασίας με παροχή τέτοια ώστε να επαρκεί για να καλύψει την ανάγκη αυτή. Ο ατμός αυτός βγαίνει στους 497.5 \( ^oC \) από τον στρόβιλο υψηλής πίεσης και θα αξιοποιηθεί ως έχει καθώς η παροχή του είναι ρυθμισμένη για να καλύψει την απαίτηση που υπάρχει. Μετά την εναλλαγή, ανακυκλώνεται στο κύκλο Rankine μιας και δεν μπορεί να γίνει κάτι άλλο.
 
 Επίσης πρέπει να υπάρχουν διαθέσιμες ψυχρές παροχές για την ψύξη των αντιδραστήρων παραγωγής φουρφουράλης και γλυκερόλης, του συμπηκνωτήρα της αποστακτικής στήλης της γλυκερόλης και τέλος θερμή παροχή για τον αναβραστήρα της στήλης εκείνης.
 
