Adding the aspen files for the complete HEN of the process

--- a/HEN_design.org
+++ b/HEN_design.org
@@ -129,3 +129,46 @@
 | FeedSteam_a | Ψυχρό |      47.732 |      22306.92 |
 
 Ξεκινάμε από τον κόμβο ανάσχεσης. Θέλουμε τα ρεύματα που μπαίνουν στον κόμβο (θερμά) να είναι λιγότερα ή ίσα από αυτά που βγαίνουν (ψυχρά) και τα θερμά να έχουν μικρότερα CP από τα ψυχρά. Δεν ασχολούμαστε με το FurfReac (αντιδραστήρας παραγωγής φουρφουράλης) καθώς είναι μακριά από τον κόμβο. Άρα έχουμε 2 θερμά, 2 ψυχρά. Το ρεύμα PureGlyc έχει μικρότερο CP και από τα δύο ψυχρά άρα μπορεί να ταιριάξει με οποιοδήποτε ενώ το FurFeed έχει μεγαλύτερο CP από το XylFeed άρα πρέπει αναγκαστικά να ταιριάξει με το FeedSteam. Αν ταιριάξουμε άρα το PureGlyc με το XylFeed, το φορτίο που μπορούμε να χρησιμοποιήσουμε είναι 51.678 MJ/h το οποίο είναι όσο χρειάζεται το XylFeed. Το FurFeed, το υπόλοιπο PureGlyc και το FurfReac με αυτήν την σειρά μπορούν να εναλλάξουν με το FeedSteam καλύπτοντας όλες τους τις ενεργειακές απαιτήσεις, ενώ οι περίσσεια θερμότητας του FeedSteam θα καλυφθεί από θερμές παροχές.
+
+* Δίκτυο εναλλαγής θερμότητας κάτω από τον κόμβο ανάσχεσης
+Κάτω από τον κόμβο ανάσχεσης έχουμε τα εξής ρεύματα.
+
+#+CAPTION: Ρεύματα κάτω από τον κόμβο ανάσχεσης
+| Ρεύμα       | Είδος | CP (MJ/h K) | ΔΗ_tot (MJ/h) |
+|-------------+-------+-------------+---------------|
+| PureGlyc_b  | Θερμό |       3.583 |      -723.766 |
+| FurFeed_b   | Θερμό |      10.173 |      -732.456 |
+| CellLig     | Θερμό |       7.654 |    -1158.4329 |
+| StExpVapors | Θερμό |      65.487 |    -34670.374 |
+| CyclProd    | Θερμό |      15.066 |      -1958.58 |
+| GlycWater   | Θερμό |       0.740 |      -503.166 |
+| FlashVapors | Θερμό |      53.681 |     -35003.91 |
+| Cycl        | Θερμό |       4.676 |        -467.6 |
+| Cellulose   | Θερμό |       4.884 |       -52.503 |
+| PureCell    | Θερμό |       3.813 |     -46.59486 |
+| Glucose     | Θερμό |      53.468 |      -1069.36 |
+| Tol         | Θερμό |        8.32 |        -166.4 |
+| CyclCond    | Θερμό |        8.32 |      -8971.67 |
+|-------------+-------+-------------+---------------|
+| CyclBoil    | Ψυχρό |       4.676 |       9545.79 |
+| SachReac    | Ψυχρό |      55.589 |        393.63 |
+| RProd       | Ψυχρό |      57.746 |      35273.06 |
+| FeedSteam_b | Ψυχρό |      47.732 |      9641.864 |
+| NaOH        | Ψυχρό |       6.058 |      367.4177 |
+| Bleach      | Ψυχρό |       4.192 |      209.1808 |
+| SachWater   | Ψυχρό |      53.897 |     1603.4358 |
+| IntSteam    | Ψυχρό |       13.32 |        8868.8 |
+
+Υπάρχουν 13 θερμά και 8 ψυχρά και αναμένεται να υπάρξει μία μεγάλη απάιτηση σε ψυχρή παροχή. Το σύστημα που θεωρήθηκε φαίνεται παρακάτω
+
+#+ATTR_ORG: :width 700px
+[[file:Δίκτυο_εναλλαγής_θερμότητας_κάτω_από_τον_κόμβο_ανάσχεσης/2023-04-14_19-38-26_screenshot.png]]
+
+Βασιζόμαστε στο ότι τα δύο πιο απαιτητικά ψυχρά είναι το RProd και το FeedSteam. Και τα δύο προθερμαίνονται μέχρι τους 90 \( ^oC \) με το FlashVapors το οποίο είναι το ρεύμα με τη μεγαλύτερη θερμοχωρητικότητα αλλά σε χαμηλή θερμοκρασία. Το ρεύμα αυτό μπορεί μετά την προθέρμανση αυτών να χρησιμοποιηθεί και γιά κάθε άλλο ψυχρό ρεύμα εκτός από τον αναβραστήρα της αποστακτικής της κυκλοπεντανόνης. Καταλήγει ως ένα μίγμα υγρού-ατμού χαμηλής ποιότητας.
+
+Μετά την προθέρμανση, χρησιμοποιούμε όσα θερμά ρεύματα της διεργασίας έχουμε διαθέσιμα σε θερμοκρασίες πάνω από τους 90 \( ^oC \) για να αυξήσουμε την θερμοκρασία των δύο ψυχρών ενώ και τα δύο ολοκληρώνονται από το StExpVapors, το άλλο σημαντικό θερμό ρεύμα της διεργασίας. Αυτό πρέπει πρώτα να εναλλάξει με το FeedSteam καθώς είναι το μόνο που μπορεί να το φέρει στους 222 \( ^oC \) και άρα είναι υποχρεωτικός βαθμός ελευθερίας. Έπειτα θερμαίνει ότι χρειάζεται από το RProd, θερμαίνει τον αναβραστήρα της αποστακτικής της κυκλοπεντανόνης και τέλος, παράγει τον ενσωματωμένο ατμό της διεργασίας στα 8.5 bar. Μετά από όλα αυτά έχουμε εκμεταλλευτεί πρακτικά όλη την λανθάνουσα θερμότητα του ρεύματος, το οποίο καταλήγει ως ένα ρεύμα στους 166 \( ^oC \) το οποίο όμως λόγω της υψηλής πίεσης είναι πλήρως υγροποιημένο (εκτός του αερίου CO_2 που έχει).
+
+Τα ρεύματα Cellig, PureGlyc και CyclProd ψύχονται μέχρι τις θερμοκρασίες που πρέπει με ψυκτικό μέσο καθώς δεν βρέθηκε κάποιο ψυχρό ρεύμα για να εναλλάξει με αυτά, ενώ τα ρεύματα Cycl, Cellulose, PureCell, Glucose, Tol ψύχονται αποκλειστικά με ψυχρή παροχή. Βέβαια, οι απαιτήσεις όλων αυτών των ρευμάτων ανέρχονται περίπου στα 2500 MJ/hr. Η υπόλοιπη ψυχρή παροχή που προβλέπεται ότι χρειάζεται από το ΜΣΓ είναι για να ψυχθούν τα υδατικά ρεύματα μέχρι τους 30 \( ^oC \) (FlashVapors, GlycWater, StExpVapors), τα οποία είναι αβέβαιο αν αξίζει να ψυχθούν και σίγουρα δεν μπορούν να αξιοποιηθούν για ατμοπαραγωγή καθώς είναι όλα πρακτικά υγρά. Επίσης, στην ολοκλήρωση αυτή δεν έχει συμπεριληφθεί ο συμπηκνωτήρας της κυκλοπεντανόνης.
+
+* Συμπέρασμα
+Αυτό δεν είναι σε καμία περίπτωση το βέλτιστο δίκτυο εναλλαγής θερμότητας το οποίο ελαχιστοποιεί τις απαιτήσεις, καθώς αυτό θα απαιτούσε ένα περίπλοκο πρόβλημα βελτιστοποίησης με πάρα πολλούς βαθμούς ελευθερίας καθώς μόνο ένα ρεύμα μπαίνει στον κόμβο και άρα έχει μοναδικό βαθμό ελευθερίας. Όμως, είναι ένα σχετικά καλό σενάριο όπου η θερμή παροχή είναι αρκετά κοντά στην ελάχιστη, όπως και η ψυχρή αν δεν ψύξουμε μέχρι την θερμοκρασία περιβάλλοντος τους ατμούς των διάφορων διεργασιών, κάτι που δεν έχει και ιδιαίτερο νόημα καθώς έχουν υγροποιηθεί και η ψύξη τους δεν θα συνέφερε.
